# theforce

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE.md  README.md  YODA-LICENSE.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  quickstart.yml  release.yml  rust-check.yml
docs/: introduction.md
examples/: TriangleArea  episodes.force  fibonacci.force  fizzbuzz.force  hello-there.force  triangle-area.force
reformatter/: Program.cs
src/: ast.rs  cli.rs  compiler.rs  grammar.pest  interpreter.rs  main.rs  parser.rs
