[package]
name = "theforce"
version = "0.1.0"
edition = "2018"
authors = ["Matthew Booe"]
description = "A Star Wars inspired programming language."
homepage = "https://github.com/mirdaki/theforce"
repository = "https://github.com/mirdaki/theforce"
license = "MIT"
keywords = ["star-wars", "programming-language"]
categories = ["compilers", "command-line-utilities"]

[features]
llvm = ["inkwell"]

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0", optional = true, version = "0.1.0-beta.4" }
pest = "2.1.3"
pest_derive = "2.1.0"
clap = "2.33.3"
